feat: upgraded to spring boot 3.0.13
Signed-off-by: Rajdeep Roy Chowdhury <rrajdeeproychowdhury@gmail.com>